--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   plugin_platform_interface: ^2.0.2
   flutter_bloc:
   hive:
+  hive_flutter:
   http:
   socket_io_client:
   get:
