--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: chat_plugin
 description: "A new Flutter project."
-version: 0.0.3
+version: 0.0.4
 homepage:
 
 environment:
@@ -19,6 +19,7 @@ dependencies:
   http:
   socket_io_client:
   get:
+  intl:
 dev_dependencies:
   flutter_test:
     sdk: flutter
