--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: chat_plugin
 description: "A new Flutter project."
-version: 0.0.7
+version: 0.0.8
 homepage:
 
 environment:
@@ -24,7 +24,11 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^3.0.0
-
+  build_runner:
+  custom_lint:
+  riverpod_generator:
+  riverpod_lint:
+  hive_generator:
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
